--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
         </div>
         
     </div>
-    
+    <script src="./js/mobail-menu.js"></script>
     <script src="./js/modal.js"></script>
 </body>
 </html>
