--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <svg width="40" height="40" class="open-btn__icon icon">
                             <use class="open-btn__element" href="./img/icons.svg#icon-menu_40px">
                             </use>
-                            <use class="close-btn__element" href="./img/icons.svg#icon-close-black">
+                            <use class="open-btn__close-element" href="./img/icons.svg#icon-close-black">
                             </use>
                         </svg>
                     </button>
