--- a/index.html
+++ b/index.html
@@ -714,8 +714,8 @@
                 </a>
             </li>
         </ul>
-
     </div>
+</div>
     
     <!-- Модальное окно -->
     <div data-modal class="backdrop is-hidden">
@@ -778,7 +778,6 @@
                 <button type="submit" class="button__submit button">Отправить</button>
             </form>
         </div>
-        
     </div>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
         integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
