--- a/portfolio.html
+++ b/portfolio.html
@@ -428,7 +428,7 @@
         </button>
         <!-- <ul class="mobile-menu">  </ul> -->
         <div class="mobile-menu">
-            <nav class="header-nav__item-mobile">
+            <nav class="header-nav__item-component">
     
                 <ul class="site-nav-mobile">
                     <li class="site-nav-mobile__item">
