--- a/portfolio.html
+++ b/portfolio.html
@@ -432,7 +432,7 @@
     
                 <ul class="site-nav-mobile">
                     <li class="site-nav-mobile__item">
-                        <a href="" class="site-nav-mobile__link site-nav-mobile__link--current link">Студия</a>
+                        <a href="./index.html" class="site-nav-mobile__link site-nav-mobile__link--current link">Студия</a>
                     </li>
                     <li class="site-nav-mobile__item">
                         <a href="./portfolio.html" class="site-nav-mobile__link link">Портфолио</a>
